// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 1: Default Baseline 1`] = `
{
  "finalNetWorth": 625336.3699851054,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338791.6968687914,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42500.04,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 12500,
      "portfolio": 12500,
      "retirementReadyTarget": 0,
      "savings": 7500,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 112867.80200081813,
      "fiNumber": 2821695.050020453,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 715039.6272106643,
      "portfolio": 715039.6272106643,
      "retirementReadyTarget": 2821695.050020453,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 112867.80200081813,
    },
    "67": {
      "age": 67,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 86909.14600768278,
      "fiNumber": 627678.9967810018,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 61801.986136442705,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 638182.5015119709,
      "portfolio": 638182.5015119709,
      "retirementReadyTarget": 627678.9967810018,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 61801.986136442705,
      "taxes": 0,
      "withdrawals": 25107.159871240074,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147957.00348760525,
      "fiNumber": 1068581.4759658736,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 625336.3699851054,
      "portfolio": 625336.3699851054,
      "retirementReadyTarget": 1068581.4759658736,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42743.25903863495,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 64,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 2: Retire Today 1`] = `
{
  "finalNetWorth": -15362944.12818013,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 47500.04,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 52500.04,
      "fiNumber": 1312501,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": -47500.04,
      "portfolio": 0,
      "retirementReadyTarget": 1312501,
      "savings": 0,
      "shortfall": 47500.04,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 5000,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 5313473.55424538,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 112867.80200081813,
      "fiNumber": 2821695.050020453,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": -5313473.55424538,
      "portfolio": 0,
      "retirementReadyTarget": 2821695.050020453,
      "savings": 0,
      "shortfall": 112867.80200081813,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "67": {
      "age": 67,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 6005278.281290656,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 86909.14600768278,
      "fiNumber": 627678.9967810018,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 61801.986136442705,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": -6005278.281290656,
      "portfolio": 0,
      "retirementReadyTarget": 627678.9967810018,
      "savings": 0,
      "shortfall": 25107.159871240074,
      "ssIncome": 61801.986136442705,
      "taxes": 0,
      "withdrawals": 0,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 15362944.12818013,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147957.00348760525,
      "fiNumber": 1068581.4759658736,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": -15362944.12818013,
      "portfolio": 0,
      "retirementReadyTarget": 1068581.4759658736,
      "savings": 0,
      "shortfall": 42743.25903863495,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 0,
    },
  },
  "logsLength": 51,
  "moneyLasts": false,
  "retirementReadyAge": 62,
  "runOutAge": 35,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 3: Social Security Enabled 1`] = `
{
  "finalNetWorth": -864526.1142366402,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338791.6968687914,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42500.04,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 12500,
      "portfolio": 12500,
      "retirementReadyTarget": 0,
      "savings": 7500,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "62": {
      "age": 62,
      "childCosts": 0,
      "coastFireNumber": 2105206.758376226,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 94404.87158829194,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 148382.19442364678,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 706760.7606396275,
      "portfolio": 706760.7606396275,
      "retirementReadyTarget": 0,
      "savings": 16659.667541776183,
      "shortfall": 0,
      "ssIncome": 37317.65529357866,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 112867.80200081813,
      "fiNumber": 1802244.8121207952,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 40778.00951598633,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 875791.584800878,
      "portfolio": 875791.584800878,
      "retirementReadyTarget": 1802244.8121207952,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 40778.00951598633,
      "taxes": 0,
      "withdrawals": 72089.7924848318,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 864526.1142366402,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 203851.8052261207,
      "fiNumber": 3255054.6027960368,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 73649.62111427922,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": -864526.1142366402,
      "portfolio": 0,
      "retirementReadyTarget": 3255054.6027960368,
      "savings": 0,
      "shortfall": 130202.18411184147,
      "ssIncome": 73649.62111427922,
      "taxes": 0,
      "withdrawals": 0,
    },
  },
  "logsLength": 51,
  "moneyLasts": false,
  "retirementReadyAge": 66,
  "runOutAge": 79,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 4: House Purchase 1`] = `
{
  "finalNetWorth": -1137359684.619426,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338791.6968687914,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42500.04,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 12500,
      "portfolio": 12500,
      "retirementReadyTarget": 0,
      "savings": 7500,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "40": {
      "age": 40,
      "childCosts": 0,
      "coastFireNumber": 67227389.26351571,
      "cumulativeShortfall": 6932955.968294285,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 6972160.235657044,
      "fiNumber": 0,
      "hasHomeAccountingDebug": true,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 71682.54112550401,
      "homeValue": 309000,
      "income": 57963.75008596298,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 6922891.041128331,
      "mortgageBalance": 237317.458874496,
      "netWorth": -6861273.427168781,
      "portfolio": 0,
      "retirementReadyTarget": 0,
      "savings": 0,
      "shortfall": 6915317.184142497,
      "ssIncome": 0,
      "taxes": 1561.8425540880005,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 316754608.9067985,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 6912655.404654024,
      "fiNumber": 2466343.8242382864,
      "hasHomeAccountingDebug": true,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 583010.8499086009,
      "homeValue": 646977.3802631529,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 63966.530354552015,
      "netWorth": -316171598.0568899,
      "portfolio": 0,
      "retirementReadyTarget": 2466343.8242382864,
      "savings": 0,
      "shortfall": 6926218.863310344,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "70": {
      "age": 70,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 445571874.81667566,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 7977349.694332416,
      "fiNumber": 397517.16279152024,
      "hasHomeAccountingDebug": true,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 750024.1035976058,
      "homeValue": 750024.1035976058,
      "income": 67532.69890491663,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": -444821850.7130781,
      "portfolio": 0,
      "retirementReadyTarget": 397517.16279152024,
      "savings": 0,
      "shortfall": 7909816.9954274995,
      "ssIncome": 67532.69890491663,
      "taxes": 0,
      "withdrawals": 0,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 1138528197.7344964,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 12428450.894599978,
      "fiNumber": 619318.7871687707,
      "hasHomeAccountingDebug": true,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 1168513.1150702666,
      "homeValue": 1168513.1150702666,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": -1137359684.619426,
      "portfolio": 0,
      "retirementReadyTarget": 619318.7871687707,
      "savings": 0,
      "shortfall": 12323237.150151007,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 0,
    },
  },
  "logsLength": 51,
  "moneyLasts": false,
  "retirementReadyAge": null,
  "runOutAge": 40,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 5: Child Event 1`] = `
{
  "finalNetWorth": 625336.3699851054,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338791.6968687914,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42500.04,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 12500,
      "portfolio": 12500,
      "retirementReadyTarget": 0,
      "savings": 7500,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "45": {
      "age": 45,
      "childCosts": 0,
      "coastFireNumber": 666454.5463338785,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 57116.49987878038,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 67195.87272386129,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3.637978807091713e-12,
      "mortgageBalance": 0,
      "netWorth": 131984.31092069554,
      "portfolio": 131984.31092069554,
      "retirementReadyTarget": 0,
      "savings": 10079.372845080914,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "53": {
      "age": 53,
      "childCosts": 0,
      "coastFireNumber": 1145092.9909970225,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 72353.4732000184,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 85121.72115931768,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 1.0913936421275139e-11,
      "mortgageBalance": 0,
      "netWorth": 310426.2275653874,
      "portfolio": 310426.2275653874,
      "retirementReadyTarget": 0,
      "savings": 12768.247959299275,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 112867.80200081813,
      "fiNumber": 2821695.050020453,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 715039.6272106643,
      "portfolio": 715039.6272106643,
      "retirementReadyTarget": 2821695.050020453,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 112867.80200081813,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147957.00348760525,
      "fiNumber": 1068581.4759658736,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 625336.3699851054,
      "portfolio": 625336.3699851054,
      "retirementReadyTarget": 1068581.4759658736,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42743.25903863495,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 64,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 6: Marriage and Spouse Income 1`] = `
{
  "finalNetWorth": 9396232.67202076,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338791.6968687914,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42500.04,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 12500,
      "portfolio": 12500,
      "retirementReadyTarget": 0,
      "savings": 7500,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "40": {
      "age": 40,
      "childCosts": 0,
      "coastFireNumber": 52548.92810992091,
      "cumulativeShortfall": 0,
      "debtBalance": 4695.060000915,
      "employerMatch": 0,
      "expenses": 5448.634520172971,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 110131.08342946297,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 135173.55397388502,
      "portfolio": 139868.6139748,
      "retirementReadyTarget": 0,
      "savings": 16519.655558774997,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "62": {
      "age": 62,
      "childCosts": 0,
      "coastFireNumber": 173371.7865344862,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 7774.600371055775,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 111064.53913006814,
      "isCoastAchieved": true,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 4230242.05699011,
      "portfolio": 4230242.05699011,
      "retirementReadyTarget": 0,
      "savings": 31653.36832937476,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 112867.80200081813,
      "fiNumber": 2821695.050020453,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 4731377.39803992,
      "portfolio": 4731377.39803992,
      "retirementReadyTarget": 2821695.050020453,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 112867.80200081813,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147957.00348760525,
      "fiNumber": 1068581.4759658736,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 207580.40497315148,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 9396232.67202076,
      "portfolio": 9396232.67202076,
      "retirementReadyTarget": 1068581.4759658736,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 207580.40497315148,
      "taxes": 0,
      "withdrawals": 0,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 41,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 7: Debts 1`] = `
{
  "finalNetWorth": 625336.3699851054,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338791.6968687914,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42500.04,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 12500,
      "portfolio": 12500,
      "retirementReadyTarget": 0,
      "savings": 7500,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "40": {
      "age": 40,
      "childCosts": 0,
      "coastFireNumber": 475172.8807901133,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 49269.19452871298,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 57963.75008596298,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 61617.61395955001,
      "portfolio": 61617.61395955001,
      "retirementReadyTarget": 0,
      "savings": 8694.55555725,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "45": {
      "age": 45,
      "childCosts": 0,
      "coastFireNumber": 666454.5463338785,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 57116.49987878038,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 67195.87272386129,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3.637978807091713e-12,
      "mortgageBalance": 0,
      "netWorth": 131984.31092069554,
      "portfolio": 131984.31092069554,
      "retirementReadyTarget": 0,
      "savings": 10079.372845080914,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 112867.80200081813,
      "fiNumber": 2821695.050020453,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 715039.6272106643,
      "portfolio": 715039.6272106643,
      "retirementReadyTarget": 2821695.050020453,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 112867.80200081813,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147957.00348760525,
      "fiNumber": 1068581.4759658736,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 625336.3699851054,
      "portfolio": 625336.3699851054,
      "retirementReadyTarget": 1068581.4759658736,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42743.25903863495,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 64,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 8: No-Tax Mode 1`] = `
{
  "finalNetWorth": 625336.3699851054,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338791.6968687914,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42500.04,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 12500,
      "portfolio": 12500,
      "retirementReadyTarget": 0,
      "savings": 7500,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 112867.80200081813,
      "fiNumber": 2821695.050020453,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 715039.6272106643,
      "portfolio": 715039.6272106643,
      "retirementReadyTarget": 2821695.050020453,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 112867.80200081813,
    },
    "67": {
      "age": 67,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 86909.14600768278,
      "fiNumber": 627678.9967810018,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 61801.986136442705,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 638182.5015119709,
      "portfolio": 638182.5015119709,
      "retirementReadyTarget": 627678.9967810018,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 61801.986136442705,
      "taxes": 0,
      "withdrawals": 25107.159871240074,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147957.00348760525,
      "fiNumber": 1068581.4759658736,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 625336.3699851054,
      "portfolio": 625336.3699851054,
      "retirementReadyTarget": 1068581.4759658736,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42743.25903863495,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 64,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 8: Tax Mode 1`] = `
{
  "finalNetWorth": -288483.3090122685,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 365242.8318949161,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 45960.0448,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000.04,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3460.0048000000024,
      "mortgageBalance": 0,
      "netWorth": 9039.9952,
      "portfolio": 9039.9952,
      "retirementReadyTarget": 0,
      "savings": 4039.9952,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 3460.0048,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 112867.80200081813,
      "fiNumber": 2821695.050020453,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 427666.62177106447,
      "portfolio": 427666.62177106447,
      "retirementReadyTarget": 2821695.050020453,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 112867.80200081813,
    },
    "67": {
      "age": 67,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 92381.21090941958,
      "fiNumber": 764480.6193244217,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 61801.986136442705,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 308714.31214617274,
      "portfolio": 308714.31214617274,
      "retirementReadyTarget": 764480.6193244217,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 61801.986136442705,
      "taxes": 5472.064901736803,
      "withdrawals": 27141.475248231312,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 288483.3090122685,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 151420.28924238385,
      "fiNumber": 1155163.6198353386,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": -288483.3090122685,
      "portfolio": 0,
      "retirementReadyTarget": 1155163.6198353386,
      "savings": 0,
      "shortfall": 46206.54479341355,
      "ssIncome": 105213.7444489703,
      "taxes": 3463.285754778606,
      "withdrawals": 0,
    },
  },
  "logsLength": 51,
  "moneyLasts": false,
  "retirementReadyAge": 66,
  "runOutAge": 80,
}
`;
